--- a/index.html
+++ b/index.html
@@ -8,13 +8,112 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h2>Styling Forms</h2>
+  <h2>Responsive Form</h2>
+  <p>Resize the browser window to see the effect. When the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other.</p>
+
+  <div class="container">
+    <form action="/action_page.php">
+      <div class="row">
+        <div class="col-25">
+          <label for="fname">First Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="fname" name="firstname" placeholder="Your name ...">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-25">
+          <label for="lname">Last Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="lname" name="lastname" placeholder="Your last name ...">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-25">
+          <label for="country">Country</label>
+        </div>
+        <div class="col-75">
+          <select id="country" name="country">
+            <option value="au">Australia</option>
+            <option value="ca">Canada</option>
+            <option value="us">USA</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-25">
+          <label for="subject">Subject</label>
+        </div>
+        <div class="col-75">
+          <textarea id="subject" name="subject" placeholder="Write something ..." style="height:200px;"></textarea>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <input type="submit" value="Submit">
+      </div>
+    </form>
+  </div>
+
+  <!-- <h2>Styling form buttons</h2>
+  <input type="button" value="Button">
+  <input type="reset" value="Reset">
+  <input type="submit" value="Submit"> -->
+
+  <!-- <h2>Styling a select menu</h2>
+  <form>
+    <select id="country" name="country">
+      <option value="au">Australia</option>
+      <option value="ca">Canada</option>
+      <option value="us">USA</option>
+    </select>
+  </form> -->
+
+  <!-- <h2>Styling textarea</h2>
+
+  <p><strong>Tip:</strong> Use the resize property to prevent textareas from being resized (disable the "grabber" in the bottom right corner):</p>
+
+  <form>
+    <textarea>Some text ...</textarea>  
+  </form> -->
+
+ <!--  <h2>Input field with an icon inside</h2>
+  <form>
+    <input type="text" name="search" placeholder="Search ...">
+  </form> -->
+
+  <!-- <h3>Using CSS to style an HTML Form</h3>
+
+  <div>
+    <form action="/action_page.php">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name ...">
+
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name ...">
+
+      <label for="country">Country</label>
+      <select id="country" name="country">
+        <option value="australia">Australia</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+      </select>
+
+      <input type="submit" value="Submit">
+    </form>
+  </div> -->
+
+  <!-- <h2>Styling Forms</h2>
 
   <form name="input" action="" method="get">
     Firstname:<input type="text" name="Name" value="Cong" size="20">
     Lastname:<input type="text" name="Name" value="Le" size="20">
     <input type="button" value="Example Button">
-  </form>
+  </form> -->
 
   <!-- <h2>CSS [attribute] Selector</h2>
   <p>The links with a target attribute gets a yellow background:</p>
