--- a/index.html
+++ b/index.html
@@ -8,7 +8,108 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h2>Responsive Form</h2>
+  <div class="header">
+    <h1>My Website</h1>
+    <p>Resize the browser window to see the effect.</p>
+  </div>
+
+  <div class="topnav">
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#" style="float:right">Link</a>
+  </div>
+
+  <div class="row">
+    <div class="leftcolumn">
+      <div class="card">
+        <h2>TITLE HEADING</h2>
+        <h5>Title description, Dec 7, 2017</h5>
+        <div class="fakeimg" style="height:200px;">Image</div>
+        <p>Some text..</p>
+        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      </div>
+      <div class="card">
+        <h2>TITLE HEADING</h2>
+        <h5>Title description, Sep 2, 2017</h5>
+        <div class="fakeimg" style="height:200px;">Image</div>
+        <p>Some text..</p>
+        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      </div>
+    </div>
+    <div class="rightcolumn">
+      <div class="card">
+        <h2>About Me</h2>
+        <div class="fakeimg" style="height:100px;">Image</div>
+        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      </div>
+      <div class="card">
+        <h3>Popular Post</h3>
+        <div class="fakeimg"><p>Image</p></div>
+        <div class="fakeimg"><p>Image</p></div>
+        <div class="fakeimg"><p>Image</p></div>
+      </div>
+      <div class="card">
+        <h3>Follow Me</h3>
+        <p>Some text..</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <h2>Footer</h2>
+  </div>
+
+  <!-- <ol>
+    <li>item</li>
+    <li>item   
+    <ol>
+      <li>item</li>
+      <li>item</li>
+      <li>item
+      <ol>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+      </ol>
+      </li>
+      <li>item</li>
+    </ol>
+    </li>
+    <li>item</li>
+    <li>item</li>
+  </ol>
+
+  <ol>
+    <li>item</li>
+    <li>item</li>
+  </ol> -->
+
+  <!-- <h1>HTML/CSS Tutorials</h1>
+  <h2>HTML</h2>
+  <h2>CSS</h2>
+  <h2>Bootstrap</h2>
+  <h2>W3.CSS</h2>
+
+  <h1>Scripting Tutorials</h1>
+  <h2>Javascript</h2>
+  <h2>jQuery</h2>
+  <h2>React</h2>
+
+  <h1>Programming Tutorials</h1>
+  <h2>Python</h2>
+  <h2>Java</h2>
+  <h2>C++</h2>
+ -->
+  <!-- <h1>Using CSS Counters</h1>
+
+  <h2>HTML Tutorial</h2>
+  <h2>CSS Tutorial</h2>
+  <h2>Javascript Tutorial</h2>
+  <h2>Python Tutorial</h2>
+  <h2>SQL Tutorial</h2> -->
+
+  <!-- <h2>Responsive Form</h2>
   <p>Resize the browser window to see the effect. When the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other.</p>
 
   <div class="container">
@@ -56,8 +157,8 @@
       <div class="row">
         <input type="submit" value="Submit">
       </div>
-    </form>
-  </div>
+    </form> -->
+  <!-- </div> -->
 
   <!-- <h2>Styling form buttons</h2>
   <input type="button" value="Button">
